UN-696  Stop timer Small bugs fixed

--- a/assets/theme.js.liquid
+++ b/assets/theme.js.liquid
@@ -2812,6 +2812,7 @@ theme.Product = (function() {
           
           $(this.selectors.StickyaddToCart).prop('disabled', true);
           $(this.selectors.StickyaddToCartText).text(theme.strings.soldOut);
+          $('#zooomybackinstock').show();
           
           // END STICKY ADD TO CART
         }
