--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -69,10 +69,10 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         {%- else -%}
         <label style="height: 100% !important;display: flex;flex-wrap: nowrap;flex-direction: row;align-items: center;justify-content: space-around;align-content: center;" for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
           {%- if size_count == 3 -%}
-          <div class="product__labels most-popular-label">
-              <span class="product__label product__label--most-popular">most popular</span>
-          </div>
-        {%- endif -%}
+            <div class="product__labels most-popular-label">
+                <span class="product__label product__label--most-popular">most popular</span>
+            </div>
+          {%- endif -%}
           <div class="indoor-block">
             <div class="size-label">
               <div class="size">
@@ -117,24 +117,14 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
       
         </label>
         {%- else -%}
-        <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
-          {{ value }}
-          <img class="crossed-out" src="{% assign ly_asset = 'soldout-1.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
-        </label>
+          <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
+            {{ value }}
+            <img class="crossed-out" src="{% assign ly_asset = 'soldout-1.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
+          </label>
         {%- endif -%}
 
         {%- endif -%}
-        {%- if variant.available -%}
-        <script>
-          jQuery('.swatch[data-option-index="{{ option_index }}"] .{{ value | handle }}').removeClass('soldout').addClass('available').find(':radio').removeAttr('disabled');
-                {% unless section.settings.enable_default_variant %}
-                jQuery('.swatch').each(function(){
-            $(this).find('.available').eq(0).find(':radio').prop( "checked", true );});
-          {% endunless %}
-        </script>
-        {%- else -%}
-          <script>jQuery('.swatch[data-option-index="{{ option_index }}"] .{{ value | handle }}').find(':radio').removeAttr('checked');</script>
-        {%- endif -%}
+
       </div>
       {%- endunless -%}
       {%- endfor -%}
@@ -142,11 +132,18 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
   </div>
 {%- endunless -%}
 {%- endif -%}
-
+<script>
+  jQuery('.swatch[data-option-index="{{ option_index }}"] .{{ value | handle }}').removeClass('soldout').addClass('available').find(':radio').removeAttr('disabled');
+   {% unless section.settings.enable_default_variant %}
+        jQuery('.swatch').each(function(){
+    $(this).find('.available').eq(0).find(':radio').prop( "checked", true );});
+  {% endunless %}
+</script>
 <style>
 .size-label {
     width: 95px;
     text-align: -webkit-center;
+    text-align: -moz-center;
 }
   .indoor-block{
     display: flex;
