--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -10,7 +10,7 @@
 {% endif %}
 
 <div class="collection-grid-item">
-  <a href="{% if collection.products == empty %}#{% else %}{{ collection.url }}{% endif %}" class="collection-grid-item__link">
+  <a href="{% if collection.products == empty %}#{% elsif collection.all_products_count == 1 %}{{collection.products.first.url}}{% else %}{{ collection.url }}{% endif %}" class="collection-grid-item__link">
     {% unless collection_image == blank %}
       <div class="collection-grid-item__overlay box ratio-container lazyload js"
          data-bgset="{% include 'bgset', image: collection_image %}"
