--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -11,6 +11,9 @@
   {%- section  'go-cart' -%}
 {%- endif -%}
 
+{{ 'magnific-popup.css' | asset_url | stylesheet_tag }}
+{{ 'jquery.magnific-popup.min.js' | asset_url | script_tag }}
+
 <script>
   // Override default values of shop.strings for each template.
   // Alternate product templates can change values of
