--- a/assets/fontawesome.css
+++ b/assets/fontawesome.css
@@ -4,13 +4,11 @@
  */
 /* FONT PATH
  * -------------------------- */
-
 @font-face {
   font-family: 'FontAwesome';
   font-style: normal;
   font-weight: 400;
-  src: url("fa-solid-900.eot");
-  src: url("fa-solid-900.eot?#iefix") format("embedded-opentype"), url("fa-solid-900.woff2") format("woff2"), url("fa-solid-900.woff") format("woff"), url("fa-solid-900.ttf") format("truetype"), url("fa-solid-900.svg#fontawesome") format("svg"); }
+  src: url("fa-solid-900.woff2") format("woff2"), url("fa-solid-900.woff") format("woff"); }
 
 /*!
  * Font Awesome Free 5.0.6 by @fontawesome - http://fontawesome.com
