Small bugs issue

--- a/snippets/ajaxify-cart.liquid
+++ b/snippets/ajaxify-cart.liquid
@@ -7,7 +7,7 @@
                 addingToCartBtnLabel: addingToCartBtnLabel_1,
                 soldOutBtnLabel: soldOutBtnLabel_1,
                 howLongTillBtnReturnsToNormal: 700,
-                cartCountSelector: ".cart-count, #CartCount span, #gocart p a, #cart .checkout em, .item-count",
+                cartCountSelector: ".cart-count, #CartCount span, #gocart p a, #cart .checkout em",
                 cartTotalSelector: "#cart-price, #CartCost",
                 itemsManage: ".items_manage",
                 feedbackPosition: "nextButton",
