--- a/templates/product.subscription.liquid
+++ b/templates/product.subscription.liquid
@@ -5,6 +5,9 @@
 
 {% section 'product-subscription-template' %}
 
+{{ 'magnific-popup.css' | asset_url | stylesheet_tag }}
+{{ 'jquery.magnific-popup.min.js' | asset_url | script_tag }}
+
 {%- if settings.show_cart_drawer -%}
   {%- section  'go-cart' -%}
 {%- endif -%}
