--- a/sections/alireviews-widget-11374.liquid
+++ b/sections/alireviews-widget-11374.liquid
@@ -14,18 +14,18 @@
 
 <div data-section-id="11374" data-section-type="widget-box" style="padding-top: 0; padding-bottom: 0;">
     <div id="shopify-ali-review-widget" product-id="{{ product.id }}">
-        <div class="shop_info" shop-id="29113221168" shop-name="unidragon.myshopify.com" style="display: none;">
+        <div class="shop_info" shop-id="{{ shop.id }}" shop-name="{{ shop.domain }}" style="display: none;">
             <div class="reviews"></div>
         </div>
 
-        <iframe id="aliReviewsFrame" class="aliReviewsFrame" widget-id="11374" title="AliReviews" src="{{ shop.metafields.alireviews.iframe_domain }}/widget/review-widget?shop_id=29113221168&widget_id=11374&type_page={{ template }}&product_id={{ product.id }}&isAdminLogin={{ isAdmin }}&star=all&customer_id={{ customer.id }}&product_in_cart={%- for item in cart.items -%}{{ item.product_id }},{%- endfor -%}&num_rand=0&total_order_values={{customer.total_spent | divided_by:100}}&avg_order_value={{ avgOrderValue }}&tag={% for tag in customer.tags %}{{ tag }},{% endfor %}&country={% for address in customer.addresses %}{{ address.country_code }}{% endfor %}&last_purchase={{ customer.last_order.created_at | date: "%Y-%m-%d %H:%M" }}" height="0" width="100%" frameborder="0" scrolling="no" margin="0" loading="lazy"></iframe>
+        <iframe class="aliReviewsFrame" widget-id="11374" title="AliReviews" data-ar-src="{{ shop.metafields.alireviews.iframe_domain }}/widget/review-widget?shop_id={{ shop.id }}&widget_id=11374&type_page={{ template }}&product_id={{ product.id }}&isAdminLogin={{ isAdmin }}&star=all&customer_id={{ customer.id }}&product_in_cart={%- for item in cart.items -%}{{ item.product_id }},{%- endfor -%}&num_rand=0&total_order_values={{customer.total_spent | divided_by:100}}&avg_order_value={{ avgOrderValue }}&tag={% for tag in customer.tags %}{{ tag }},{% endfor %}&country={% for address in customer.addresses %}{{ address.country_code }}{% endfor %}&last_purchase={{ customer.last_order.created_at | date: "%Y-%m-%d %H:%M" }}&t={{ shop.metafields.alireviews.timestamp }}" height="0" width="100%" frameborder="0" scrolling="no" margin="0"></iframe>
     </div>
 </div>
 
 {% schema %}
 {
     "name": "Review Box 1",
-    "class": "index-section index-section--flush",
+    "class": "index-section",
     "presets": [{
         "name": "Review Box 1",
         "category": "Ali Reviews"
