--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -490,7 +490,8 @@
           
           {% endform %}
 
-{%- render 'back-in-stock-form', product_variants_id: current_variant.id -%}
+            {%- render 'back-in-stock-form', product_id: product.id, product_variants_id: current_variant.id -%}
+
           {% if section.settings.enable_sticky %}
           <style>
 
